--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,8 +1,8 @@
 name: Hello-world
 on: push 
-jobs: hello-world-job
- runs-on:
+jobs: hello-world-job:
+ runs-on: ubuntu-latest
     steps:
-      - name:Check out repository code
-        uses:actions/checkout@v3
+      - name: Check out repository code
+        uses: actions/checkout@v3
       - run: echo "$(cat hello_world.txt)"
