--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,6 +1,6 @@
 name: Hello-world
 on: push 
-jobs: hello-world-job:
+jobs: hello-world-job
  runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
