--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,7 +1,8 @@
 name: Hello-world
 on: push 
-jobs: hello-world-job
- runs-on: ubuntu-latest
+jobs: 
+  hello-world-job:
+    runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
